@@ -1,0 +1,1 @@
+debian/watch: Use GitHub /tags rather than /releases page.
