@@ -6,7 +6,7 @@ lintian-brush (0.131) UNRELEASED; urgency=medium
   * detect_gbp_dch: Scan for WIP headers in changelog as well.
 
   [ Debian Janitor ]
-  * Remove constraints unnecessary since buster:(oldstable)
+  * Remove constraints unnecessary since buster (oldstable):
     + Build-Depends: Drop versioned constraint on gpg and python3-dulwich.
     + lintian-brush: Drop versioned constraint on python3-dulwich in Depends.
     + lintian-brush: Drop versioned constraint on gpg in Recommends.
@@ -16,6 +16,7 @@ lintian-brush (0.131) UNRELEASED; urgency=medium
   * Rely on check_upstream_metadata to follow redirects. Closes: #948637
   * homepage-field-uses-insecure-uri: Don't update Homepage field if
     https page redirects back to http page. Closes: #977593
+  * debian/watch: Replace use of /releases with /tags for GitHub URLs.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 06 Sep 2022 19:53:17 +0100
 
